--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,25 +1,55 @@
+@import './mixins.scss';
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 
-// custom Font
-$body-font-family: 'Jost', sans-serif;
-$body-font-weight: 400;
+$theme-colors: (
+  "primary":   #630A37,
+  "secondary": #616161,
+  "detail":    #969696,
+  "bg-opea":   #F5F5F5,
+  "border-opea": #DDDDDD,
+);
+
+//Typo: custom font
 $heading-font-family: 'Jost', sans-serif;
-$heading-font-weight: 600;
-
-//Custom colors
-$brand-color: #630A37;
-$text-base-color: #616161;
-$detail-color: #DDDDDD;
-$bg-base-color: #FFFFFF;
+$display-font-family: 'Jost', sans-serif;
 
 
+//Typo: font size
+$text-xxs: 10px;
+$text-xs: 12px;
+$text-default: 14px;
+$text-md: 16px;
+$text-lg: 22px;
 
-// Exemplo de uso das variáveis de cores personalizadas
+//Typo: font weight
+$fw-medium: 500;
+
 
 * { 
-    font-family: $body-font-family;
+  font-family: $display-font-family;
 }
 
-.title {
-  color: $text-base-color;
+.text-xxs {
+  font-size: $text-xxs;
+}
+
+.text-xs {
+  font-size: $text-xs;
+  line-height: 18px;
+}
+
+.text-default {
+  font-size: $text-default;
+  font-weight: 400;
+  line-height: 16px;
+}
+
+.text-md  {
+  font-size: $text-md;
+  line-height: 20px;
+}
+
+.text-lg {
+  font-size: $text-lg;
 }
