--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,2 @@
-@import './custom.scss';
-@import '~bootstrap/scss/bootstrap';
+@import '../scss/custom.scss';
+@import '/node_modules/bootstrap/scss/bootstrap.scss';
