--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -25,9 +25,10 @@ $text-lg: 22px;
 //Typo: font weight
 $fw-medium: 500;
 
-
+//Global classes
 * { 
   font-family: $display-font-family;
+  font-size: $text-default;
 }
 
 .text-xxs {
@@ -41,7 +42,6 @@ $fw-medium: 500;
 
 .text-default {
   font-size: $text-default;
-  font-weight: 400;
   line-height: 16px;
 }
 
@@ -52,4 +52,19 @@ $fw-medium: 500;
 
 .text-lg {
   font-size: $text-lg;
+}
+
+.btn-spacing {
+  margin-top: 50px;
+  padding: 0 30px;
+
+  @include phone-only {
+    margin-top: 20px;
+    padding: 0 4px;
+  }
+
+  @include tablet-portrait-up {
+    margin-top: 25px;
+    padding: 0 6px;
+  }
 }
